--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section{
     font-size: 4rem;
     text-align: center;
     padding:1rem;
-    margin: 1rem 0 2rem 0;
+    margin: 5rem 0 2rem 0;
     color: #333;
     background: rgba(29, 69, 245, 0.05);
 }
@@ -62,6 +62,7 @@ header .Name{
     font-size: 6rem;
     font-weight: bolder;
     color: #333;
+    text-decoration: underline;
 }
 
 header .Name span{
@@ -118,6 +119,15 @@ header .fa-bars{
     color: #ff0000;
     background: rgba(255, 51, 153, .05);
 
+}
+
+.lp .products .box .name_link{
+    color: #333;
+}
+
+.lp .products .box a:hover{
+    color: #ff0000;
+    text-decoration: underline;
 }
 
 .lp .products .box .image{
